--- a/culturefeed_uitpas/translations/culturefeed_uitpas.nl.po
+++ b/culturefeed_uitpas/translations/culturefeed_uitpas.nl.po
@@ -668,8 +668,8 @@ msgid "Get an UiTPAS"
 msgstr "Haal je UiTPAS"
 
 #: theme/culturefeed-uitpas-promotion.tpl.php:32
-msgid "Valid till"
-msgstr "Geldig tot"
+msgid "Availability"
+msgstr "Geldigheidsperiode"
 
 #: theme/culturefeed-uitpas-promotion.tpl.php:37
 msgid "Still available"
@@ -684,8 +684,8 @@ msgid "From !date"
 msgstr "Van !date"
 
 #: theme/theme.inc:56;474
-msgid "valid until !date"
-msgstr "geldig tot !date"
+msgid "until !date"
+msgstr "tot !date"
 
 #: theme/theme.inc:68;492
 msgid "At"
@@ -815,8 +815,8 @@ msgid "!points points"
 msgstr "!points punten"
 
 #: theme/theme.inc:478
-msgid "Valid until !date"
-msgstr "Geldig tot !date"
+msgid "Until !date"
+msgstr "Tot !date"
 
 #: theme/theme.inc:481;771;774;879
 msgid "Until end of stock"
